# prevedict

./: .gitignore  README.md  prevedict.spec  pyproject.toml  scripts.py
prevedict/: main.py
prevedict/assets/: information_page.txt
prevedict/conf/: __init__.py  const.py  defaults.py  helpers.py  palette.py  paths.py  settings.py  ui_text.py  winconfig.py
prevedict/model/: dictionary.py  langcheck.py  thesaurus.py
prevedict/utils/: __init__.py  font_constructor.py  font_info.py  icon_drawer.py  worker.py
prevedict/views/: info_dialog.py  main_view.py  main_window.py  settings_dialog.py
prevedict/views/widgets/: __init__.py  confirmation_box.py  fixed_hbox_layout.py  font_picker.py  icon_button.py  smart_line_edit.py  splitter.py  tabs.py  word_display.py
processors/: analyzer.py  dict_pickler.py  paths.py  raw_converter.py  scraped.txt  transcription_replacer.py  transcription_scraper.py
tests/: benchmark.py  test_helpers.py
